--- a/index.html
+++ b/index.html
@@ -95,51 +95,59 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="http://www.naver.com" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://github.com/KimJinTae1202/RandomVendingMachine.git" target="_blank" class="image fit"><img src="images/음료.png" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3><span>랜덤 음료 자판기</span></h3>
+											<h4>2017.03.06 ~ 2017.06.14</h4>
+											<h4>#Android #IoT #RFID</h4>
 										</header>
 									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<!-- <article class="item">
+										<a href="#" class="image fit"><img src="images/택배함.png" alt="" /></a>
 										<header>
 											<h3>Rhoncus Semper</h3>
 										</header>
-									</article>
+									</article> -->
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="https://github.com/KimJinTae1202/Fload.git" target="_blank" class="image fit"><img src="images/Fload.PNG" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Fload</h3>
+											<h4>2020.07.06 ~ 2020.09.04</h4>
+											<h4>#Android #Django #REST #QGIS</h4>
+											<H4>#R #Python #Javascript</H4>
 										</header>
 									</article>
-									<article class="item">
+									<!-- <article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Natoque Vitae</h3>
 										</header>
-									</article>
+									</article> -->
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="https://github.com/KimJinTae1202/-Unmanned-delivery-service.git" target="_blank" class="image fit"><img src="images/택배함.PNG" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>무인 택배함</h3>
+											<h4>2019.03.06 ~ 2019.06.15</h4>
+											<h4>#Android #JSP #REST #Java</h4>
+											<H4>#Raspberry Pi #Python </H4>
 										</header>
 									</article>
-									<article class="item">
+									<!-- <article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
 											<h3>Orci Convallis</h3>
 										</header>
-									</article>
+									</article> -->
 								</div>
 							</div>
 
 						</div>
 					</section>
-				<br>
+
 				<!-- About Me -->
 					<section id="about" class="three">
 						<div class="container">
