--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 										</header>
 									</article>
 									<!-- <article class="item">
-										<a href="#" class="image fit"><img src="images/택배함.png" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/음료.png" alt="" /></a>
 										<header>
 											<h3>Rhoncus Semper</h3>
 										</header>
