--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 							<header>
 								<h2>
-									Engineer 김진태의 포트폴리오입니다.
+									Engineer 김진태의 포트폴리오입니다.<br>
 								</h2>
 								
 							</header>
