--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 									<article class="item">
 										<a href="https://github.com/KimJinTae1202/-Unmanned-delivery-service.git" target="_blank" class="image fit"><img src="images/t.png" alt="" /></a>
 										<header>
-											<h3>무인 택배함</h3>d
+											<h3>무인 택배함</h3>
 											<h4>2019.03.06 ~ 2019.06.15</h4>
 											<h4>#Android #JSP #REST #Java</h4>
 											<H4>#Raspberry Pi #Python </H4>
